View Issue Details

IDProjectCategoryView StatusLast Update
0023038Open CASCADEOCCT:Application Frameworkpublic2012-03-29 17:26
Reporterapn Assigned Tovro  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0023038: QA command OCC361 gives an exception
DescriptionAfter integration of fixes for issues: 0023023 , #23031, 0022867, 0023033, 0023027 the following regression has been detected:

QA command OCC361 give an exception

** Exception ** 0xb7544c8c : OSD_SIGSEGV: SIGSEGV 'segmentation violation' detected. Address 8An exception was caught 0xb7544c8c : OSD_SIGSEGV: SIGSEGV 'segmentation violation' detected. Address 8
TagsNo tags attached.
Test case numberchl 920 B7

Relationships

child of 0021977 closedszy Unsafe implementation of TNaming_Builder 

Activities

bugmaster

2012-03-27 11:03

administrator   ~0020152

Vlad,

Please analyze problem on current state of master

bugmaster

2012-03-27 12:35

administrator   ~0020156

Andrey,

CR23038 branch has been created for fix.
Could you please revise the latter

abv

2012-03-27 12:44

manager   ~0020157

No remarks (apart of those given in 0021977); please test

bugmaster

2012-03-28 12:40

administrator   ~0020182

      Workbench KAS:dev:apn-23038-occt was created from git branch 23038
(and apn-23038-products from svn trunk) and compiled on Linux platform.
   
     There are not regressions in apn-23038-products regarding to
KAS:dev:products-20120323-opt

bugmaster

2012-03-28 13:07

administrator   ~0020183

Integrated into master

Related Changesets

occt: master f11b9af4

2012-03-28 08:33:22

vro

Details Diff
0023038: QA command OCC361 gives an exception Affected Issues
0023038
mod - src/QABugs/QABugs_1.cxx Diff File

Issue History

Date Modified Username Field Change
2012-03-26 15:48 apn New Issue
2012-03-26 15:48 apn Assigned To => bugmaster
2012-03-26 15:49 apn Test case number => chl 920 B7
2012-03-26 15:49 apn Description Updated
2012-03-26 15:55 abv Description Updated
2012-03-26 15:58 bugmaster Description Updated
2012-03-26 18:13 bugmaster Summary QA command OCC361 give an exception => QA command OCC361 gives an exception
2012-03-26 18:13 bugmaster Description Updated
2012-03-27 11:03 bugmaster Note Added: 0020152
2012-03-27 11:03 bugmaster Assigned To bugmaster => vro
2012-03-27 11:03 bugmaster Status new => assigned
2012-03-27 12:35 bugmaster Note Added: 0020156
2012-03-27 12:35 bugmaster Assigned To vro => abv
2012-03-27 12:35 bugmaster Status assigned => resolved
2012-03-27 12:43 abv Relationship added child of 0021977
2012-03-27 12:44 abv Note Added: 0020157
2012-03-27 12:44 abv Status resolved => reviewed
2012-03-27 12:57 mkv Assigned To abv => apn
2012-03-28 12:40 bugmaster Note Added: 0020182
2012-03-28 12:40 bugmaster Assigned To apn => bugmaster
2012-03-28 12:40 bugmaster Status reviewed => tested
2012-03-28 13:07 bugmaster Note Added: 0020183
2012-03-28 13:07 bugmaster Status tested => verified
2012-03-28 13:07 bugmaster Resolution open => fixed
2012-03-29 17:26 vro Changeset attached => occt master f11b9af4