0023038: QA command OCC361 gives an exception